@@ -9,27 +9,28 @@ WriteMakefile
  , VERSION	=> $version
 
  , PREREQ_PM    =>
-   { Any::Daemon      => '0.93'
+   { Any::Daemon      => 0.93
    , URI              => 0
    , Encode           => 0
    , English          => 0
    , Fcntl            => 0
    , File::Basename   => 0
    , File::Spec       => 0
-   , HTTP::Daemon     => '6.03'
+   , HTTP::Daemon     => 6.03
    , HTTP::Response   => 0
    , HTTP::Status     => 0
    , IO::Select       => 0
    , IO::Socket       => 0
    , IO::Socket::IP   => 0
    , List::Util       => 0
-   , Log::Report      => '1.00'
+   , LWP::UserAgent   => 6.00
+   , Log::Report      => 1.00
    , MIME::Types      => 0
    , Net::CIDR        => 0
-   , POSIX::1003      => '0.96'
+   , POSIX::1003      => 0.96
    , Scalar::Util     => 0
    , Socket           => 0
-   , Digest::MD5      => '2.53'
+   , Digest::MD5      => 2.53
    }
 
  , AUTHOR       => 'Mark Overmeer'
